--- a/app/src/main/res/layout/activity_difficulty.xml
+++ b/app/src/main/res/layout/activity_difficulty.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:orientation="vertical"
-    tools:context=".DifficultyActivity">
+    tools:context=".DifficultyFragment">
 
     <TextView
         android:id="@+id/tv_difficulty"
