--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -406,7 +406,7 @@
             <ImageView
                 android:id="@+id/iv_gm_4_2"
                 android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_margin="0.5dp"
                 android:background="#ffffff"
                 android:clickable="true"
